styles/style.css
:root {
  --main-font: "Lato", sans-serif;
  
  --white: #ffffff;
  --gray-200: #f4f5f7;
  --gray-300: #e5e8ed;
  --gray-400: #d7dadd;
  --gray-500: #b3b7bc;
  --gray-600: #9a9ca5;
  --gray-700: #787a80;
  --gray-800: #424551;
  --gray-900: #1e212c;
  --black: #000000;

  --primary-color: #ff3f3a;
  --secondary-color: #ffcf2d;

  --section-gradient: linear-gradient(55.95deg, rgba(255, 63, 58, 0.2) 0%, rgba(247, 94, 5, 0.2) 100%);
  --section-gradient-no-opacity:  linear-gradient(55.95deg, rgb(255, 63, 58) 0%, rgb(247, 94, 5) 100%);
  --btn-gradient: linear-gradient(55.95deg, #ff3f3a 0%, #f75e05 100%);
}

@font-face {
  font-family: "Lato";
  font-style: normal;
  font-weight: 400;
  src: url("../fonts/Lato-Regular.woff") format("woff");
  font-display: swap;
}

@font-face {
  font-family: "Lato";
  font-style: normal;
  font-weight: 700;
  src: url("../fonts/Lato-Bold.woff") format("woff");
  font-display: swap;
}

@font-face {
  font-family: "Lato";
  font-style: normal;
  font-weight: 900;
  src: url("../fonts/Lato-Black.woff") format("woff");
  font-display: swap;
}

@keyframes burger-menu-item {
  from {transform: translateX(-200px); -webkit-transform: translateX(-200px);}
  to {transform: translateX(0px); -webkit-transform: translateX(0px);}
}

/************************************************************************************************

                                  Global styles

************************************************************************************************/

*,
*::before,
*::after {
  box-sizing: border-box;
}

html {
  height: 100%;
  padding: 0;
  margin: 0;
  scroll-behavior: smooth;
  overflow-x: hidden;
}

body {
  display: flex;
  flex-direction: column;
  min-height: 100%;
  padding: 0;
  margin: 0 auto;
  overflow-x: hidden;

  font-family: var(--main-font);
  font-weight: 400;
  font-size: 16px;
  line-height: 25.6px;
  color: var(--gray-800);
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

/********************************     Containers styles     ********************************/

.section {
  position: relative;
  padding: 20px;
  overflow: hidden;
}

.section-container {
  position: relative;
  display: grid;
  max-width: 1310px;
  margin: auto;
  padding: 80px 40px;
  grid-template-columns: 1.2fr 1fr;
  grid-auto-rows: min-content;
  column-gap: 10rem;
  justify-content: center;
  align-items: center;
  z-index: 1;
}

.floating-content {
  opacity: 0;
  transform: translateY(100px);
}

.one-columned-container {
  grid-template-columns: 1fr;    
  justify-items: center;
  column-gap: 0;
}

.element-show {
  opacity: 1;
  transition: all 1s;
  transform: translateY(0);
}

.gradient-bg {
  background: var(--section-gradient);
}

.gray-bg {
  background: var(--gray-200);
}

.parallax {
  display: block;
  position: absolute;
  background-size: auto;
  background-position: center;
  background-repeat: no-repeat;
  pointer-events: none;
}

.locked {
  overflow: hidden;
}

/********************************     Buttons     ********************************/

.button {
  padding: 0 44px;
  font-weight: 700;
  line-height: 52px;
  text-decoration: none;
  text-align: center;
  white-space: nowrap;
  border: none;
  border-radius: 4px;
  background: none;
  cursor: pointer;
}

.primary-btn {
  background: var(--btn-gradient);
  color: var(--white);
}

.primary-btn:hover {
  box-shadow: 0px 0px 2px black;
  transition: 0.6s;
}

.primary-btn:active {
  box-shadow: inset 0px 0px 8px black;
}

.secondary-btn {
  background: none;
  background-color: transparent;
  outline: solid 1px var(--primary-color);
  color: var(--primary-color);
}

.secondary-btn:hover {
  background: var(--btn-gradient);
  color: var(--white);
  transition: 0.3s;
}

.secondary-btn:active {
  box-shadow: inset 0px 0px 8px black;
}

.slider-btn {
  width: 48px; 
  height: 48px;
  border: none;
  border-radius: 50%;
  background: none;
  cursor: pointer;
}

.slider-btn svg {
  transform: translateY(1.5px);
}

.slider-btn-next {
  transform: rotate(180deg);
}

.slider-btn:hover {
  background-color: var(--primary-color);
  transition: 0.3s;
}

.slider-btn:hover svg {
  fill: var(--white);
  transition: 0.3s;
}

.left-floated-btn {
  justify-self: start;
  align-self: start;
}

.right-floated-btn {
  justify-self: end;
  align-self: start;
}

/********************************     Titles      ********************************/

.section-title {
  padding: 0;
  margin: 0;
  margin-bottom: 60px;
  font-size: 2rem;
  line-height: 60px;
  font-weight: 900;
  color: var(--gray-900);
  grid-column-start: 1;
  z-index: 1;
}

.pretitle {
  padding: 0;
  margin: 0;
  margin-bottom: 8px;
  font-size: 1rem;
  line-height: 24px;
  text-transform: uppercase;
  font-weight: 700;
  align-self: end;
  order: -1;
}

/************************************************************************************************

                                  Header styles

************************************************************************************************/

.header-navigation {
  display: flex;
  flex-wrap: wrap;
  margin: auto;
  padding: 20px;
  max-width: 1230px;
  width: 100%;
  align-items: center;
}

.createx-logo {
  display: block;
  width: 130px;
  height: 22px;
  margin-right: 60px;
}

.header-navigation-list {
  display: flex;
  flex-wrap: wrap;
  max-width: 432px;
  justify-content: space-between;
  padding: 0;
  margin: 0;
  margin-right: auto;
  align-items: center;
  list-style-type: none;
}

.header-navigation-item:not(:last-child) {
  margin-right: 40px;
}

.header-navigation-link {
  font-weight: 700;
  color: var(--gray-800);
  text-decoration: none;
  white-space: nowrap;
}

.active-page .header-navigation-link {
  color: var(--primary-color);
}

.header-navigation-link:hover {
  opacity: 0.8;
  transition: 0.3s;
}
/* ... */

